--- a/config.json
+++ b/config.json
@@ -1,25 +1,39 @@
 {
   "log" : {
-    "access": "/var/log/v2ray/access.log",
-    "error": "/var/log/v2ray/error.log",
-    "loglevel": "warning"
+    "access" : "/var/log/v2ray/access.log" ,
+    "error" : "/var/log/v2ray/error.log" ,
+    "loglevel" : "debug"
   },
-  "inbound": {
-    "port": 8080,
+  "inbound" : {
+    "port": 8080, 
     "protocol": "vmess",
     "settings": {
       "clients": [
         {
-          "id": "UUID",
-          "level": 1,
-          "alterId": 10
+          "id" : "UUID" ,
+          "level" : 0,
+          "alterId" : 2,
+          "security": "aes-128-gcm"
         }
       ]
     },
     "streamSettings": {
-      "network": "ws",
-      "wsSettings": {
-        "path": "/ray"
+      "network": "tcp",
+      "tcpSettings": {
+        "header": {
+          "type": "http",
+          "response": {
+            "version": "1.1",
+            "status": "200",
+            "reason": "OK",
+            "headers": {
+              "Content-Type": ["application/octet-stream", "application/x-msdownload", "text/html", "application/x-shockwave-flash"],
+              "Transfer-Encoding": ["chunked"],
+              "Connection": ["keep-alive"],
+              "Pragma": "no-cache"
+            }
+          }
+        }
       }
     }
   },
@@ -29,9 +43,9 @@
   },
   "outboundDetour": [
     {
-      "protocol": "blackhole",
-      "settings": {},
-      "tag": "blocked"
+      "protocol" : "blackhole" ,
+      "settings" : {},
+      "tag" : "blocked"
     }
   ],
   "routing": {
@@ -39,27 +53,41 @@
     "settings": {
       "rules": [
         {
-          "type": "field",
-          "ip": [
-            "0.0.0.0/8",
-            "10.0.0.0/8",
-            "100.64.0.0/10",
-            "127.0.0.1/8",
-            "169.254.0.0/16",
-            "172.16.0.0/12",
-            "192.0.0.0/24",
-            "192.0.2.0/24",
-            "192.168.0.0/16",
-            "198.18.0.0/15",
-            "198.51.100.0/24",
-            "203.0.113.0/24",
-            "::1/128",
-            "fc00::/7",
+          "type" : "field" ,
+          "ip" : [
+            "0.0.0.0/8" ,
+            "10.0.0.0/8" ,
+            "100.64.0.0/10" ,
+            "127.0.0.0/8" ,
+            "169.254.0.0/16" ,
+            "172.16.0.0/12" ,
+            "192.0.0.0/24" ,
+            "192.0.2.0/24" ,
+            "192.168.0.0/16" ,
+            "198.18.0.0/15" ,
+            "198.51.100.0/24" ,
+            "203.0.113.0/24" ,
+            "::1/128" ,
+            "fc00::/7" ,
             "fe80::/10"
           ],
-          "outboundTag": "blocked"
+          "outboundTag" : "blocked"
         }
       ]
+    }
+  },
+"dns": {
+    "server": [
+      "1.1.1.1",
+      "1.0.0.1",
+      "8.8.8.8",
+      "8.8.4.4",
+      "localhost"
+    ]
+  },
+  "transport": {
+    "sockopt": {
+      "tcpFastOpen": true
     }
   }
 }
