--- a/default.conf
+++ b/default.conf
@@ -1,9 +1,9 @@
 server {
-	listen PORT default_server;
-	listen [::]:PORT default_server;
+	listen 80 default_server;
+	listen [::]:80 default_server;
 	charset utf-8;
 
-        location /ray {
+        location / {
         proxy_redirect off;
         proxy_pass http://127.0.0.1:8080;
         proxy_http_version 1.1;
