--- a/default.conf
+++ b/default.conf
@@ -1,6 +1,6 @@
 server {
-	listen 80 default_server;
-	listen [::]:80 default_server;
+	listen PORT default_server;
+	listen [::]:PORT default_server;
 	charset utf-8;
 
         location / {
