--- a/default.conf
+++ b/default.conf
@@ -3,13 +3,14 @@ server {
 	listen [::]:PORT default_server;
 	charset utf-8;
 
-        location /ray {
-        proxy_redirect off;
-        proxy_pass http://127.0.0.1:8080;
-        proxy_http_version 1.1;
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection "upgrade";
-        proxy_set_header Host $http_host;
-        }
+       location  / {
+		root /var/lib/nginx/html/index.html;
+		proxy_http_version 1.1;
+		proxy_set_header Upgrade "websocket";
+		proxy_set_header Connection "upgrade";
+		if ($http_upgrade = "websocket") {
+		proxy_pass http://127.0.0.1:8080;
+		}
+	}
 	
 }
